// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled comments 1`] = `
<View>
  <Text>
    Comments for this article have been turned off
  </Text>
  <Text>
    For more details, please see our 
    

    <Text
      accessibilityRole="link"
    >
      community guidelines
    </Text>
  </Text>
</View>
`;

exports[`enabled comments 1`] = `
<View>
  <Text>
    123 comments
  </Text>
  <Text>
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
    >
      here
    </Text>
  </Text>
  <View
    inViewport={false}
  >
    <View>
      <View>
        <View
          focusable={true}
        >
          <View />
          <View />
        </View>
        <Text>
          <Text>
            Tap to read comments and join in with the conversation
          </Text>
        </Text>
        <View />
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="View comments"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      title="View comments"
    >
      View comments
    </Text>
  </View>
</View>
`;

exports[`single comment 1`] = `
<View>
  <Text>
    1 comment
  </Text>
  <Text>
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
    >
      here
    </Text>
  </Text>
  <View
    inViewport={false}
  >
    <View>
      <View>
        <View
          focusable={true}
        >
          <View />
          <View />
        </View>
        <Text>
          <Text>
            Tap to read comments and join in with the conversation
          </Text>
        </Text>
        <View />
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="View comments"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      title="View comments"
    >
      View comments
    </Text>
  </View>
</View>
`;

exports[`zero comments 1`] = `
<View>
  <Text>
    0 comments
  </Text>
  <Text>
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
    >
      here
    </Text>
  </Text>
  <View
    inViewport={false}
  >
    <View>
      <View>
        <View
          focusable={true}
        >
          <View />
          <View />
        </View>
        <Text>
          <Text>
            Tap to read comments and join in with the conversation
          </Text>
        </Text>
        <View />
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Post a comment"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      title="Post a comment"
    >
      Post a comment
    </Text>
  </View>
</View>
`;
